[package]
name = "rss-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.171", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.1"
features = ["postgres", "migrate", "uuid", "macros", "chrono", "tls-rustls"]
