[package]
name = "rss-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
rust-argon2 = "1.0.0"
chrono = { version = "0.4.26", features = ["serde"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
serde-aux = "4.2.0"
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
dotenv = "0.15.0"
futures-util = "0.3.28"

[dependencies.sqlx]
version = "0.7.1"
features = [
    "postgres",
    "migrate",
    "uuid",
    "macros",
    "chrono",
    "tls-rustls",
    "runtime-tokio",
]
